[package]
name = "bench-king"
version = "0.1.0"
edition = "2021"
default-run = "bench-king"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "env"] }
espn-fantasy-football = { path = "../espn-fantasy-football"}
tokio = { version = "1.33.0", features = ["full"] }
